# async-toolformer-orchestrator

./: .editorconfig  .env.example  .pre-commit-config.yaml  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETION.md  AUTONOMOUS_SDLC_COMPLETION_FINAL.md  AUTONOMOUS_SDLC_COMPLETION_FINAL.py  AUTONOMOUS_SDLC_COMPLETION_RECORD.json  AUTONOMOUS_SDLC_COMPLETION_SUMMARY.md  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_NOTE.md  DEVELOPMENT.md  Dockerfile  FINAL_DEMONSTRATION.py  GENERATION4_AUTONOMOUS_AI_COMPLETION.md  GENERATION5_QUANTUM_LEAP_COMPLETION.md  IMPLEMENTATION_SUMMARY.md  Makefile  Makefile.terragon  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  QUANTUM_FEATURES.md  README.md  REVERT.md  REVERT_COMMIT.md  SECURITY.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETION.md  advanced_quality_gates_ml.py  comprehensive_quality_gates.py  comprehensive_sdlc_validation.py  demo_basic_functionality.py  demo_generation3_optimization.py  demo_intelligent_functionality.py  demo_optimized_functionality.py  demo_research_algorithms.py  demo_robust_functionality.py  deployment_summary.json  (+28 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release-drafter.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: deploy.yml  production-deploy.yml
.terragon/: README.md  autonomous-discovery.py  config.yaml  scheduler.py  value-executor.py  value-metrics.json
config/: prometheus.yml  redis.conf
config/grafana/dashboards/: async-toolformer-overview.json  async-toolformer-performance.json
config/grafana/datasources/: prometheus.yml
deployment/: Dockerfile  docker-compose.global.yml  global_deployment_orchestrator.py
deployment/compliance/: gdpr-compliance.md
deployment/kubernetes/: production.yaml
docs/: ROADMAP.md  sentiment-analysis.md
docs/adr/: ADR-003-speculation-engine.md  ADR-004-branch-management.md
docs/api/: openapi.yaml
docs/architecture/: ADR-001-async-orchestrator-design.md  ADR-002-rate-limiting-strategy.md
docs/benchmarks/: performance-baseline.md
docs/compliance/: SLSA.md  advanced-compliance-framework.md
docs/governance/: code-review-guidelines.md
docs/operations/: disaster-recovery.md  monitoring-playbook.md  operational-excellence.md
docs/quality/: advanced-testing-strategy.md
docs/security/: advanced-security-practices.md
docs/workflows/: README.md  ci-cd-setup.md  ci-template.yml  deployment-template.yml  github-actions-setup.md  production-deployment-workflow.md  security-template.yml  workflow-setup-guide.md
examples/: basic_example.py  demo.py  optimized_example.py  production_example.py  quantum_example.py  robust_example.py  sentiment_example.py  sentiment_production_example.py
helm/async-toolformer/: Chart.yaml  values.yaml
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml
k8s/helm/: Chart.yaml  values-production.yaml  values.yaml
k8s/helm/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  service.yaml  servicemonitor.yaml
locales/: de_DE.json  en_US.json  ja_JP.json
monitoring/: alert-rules.yml  grafana-dashboard.json  prometheus.yml
observability/: docker-compose.monitoring.yml  logging.yml
observability/prometheus/: prometheus.yml
observability/prometheus/rules/: async-toolformer-alerts.yml
scripts/: release.sh
scripts/performance/: benchmark-runner.py  profile_runner.py
scripts/sbom/: generate-sbom.py
security/: network-policy.yaml  pod-security-policy.yaml  security-policy.yml  security-scan-config.yml
src/async_toolformer/: __init__.py  adaptive_scaling.py  advanced_error_recovery.py  advanced_ml_optimizer.py  advanced_security.py  advanced_validation.py  auto_scaling.py  autonomous_ai_orchestrator.py  autonomous_intelligence_engine.py  autonomous_learning_engine.py  autonomous_manager.py  branch_manager.py  caching.py  compliance.py  comprehensive_monitoring.py  config.py  connection_pool.py  enhanced_monitoring.py  enhanced_reliability.py  error_recovery.py  exceptions.py  global_edge_orchestrator.py  health_monitor.py  i18n.py  input_validation.py  intelligent_caching.py  intelligent_orchestrator.py  llm_integration.py  memory_manager.py  metrics.py  ml_optimizer.py  next_gen_orchestrator.py  orchestrator.py  performance_optimizer.py  predictive_auto_scaler.py  profiling.py  quantum_cache.py  quantum_concurrency.py  quantum_load_balancer.py  quantum_orchestrator.py  (+25 more)
src/async_toolformer/database/: __init__.py  models.py  repository.py
tests/: __init__.py  conftest.py  test_orchestrator.py  test_rate_limiter.py  test_tools.py
tests/advanced/: test_next_gen_orchestrator.py  test_quantum_load_balancer.py
tests/e2e/: __init__.py  test_real_llm_integration.py
tests/integration/: test_advanced_features.py  test_basic_orchestration.py  test_generation_enhancements.py  test_parallel_execution.py  test_quantum_integration.py  test_sentiment_integration.py
tests/mutation/: test_mutation.py
tests/performance/: test_benchmarks.py  test_quantum_performance.py
tests/property/: __init__.py  test_orchestrator_properties.py
tests/security/: test_quantum_security.py  test_security.py
tests/unit/: test_advanced_validation.py  test_enhanced_reliability.py  test_orchestrator.py  test_sentiment_analyzer.py  test_sentiment_validation.py  test_tools.py
