[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "async-toolformer-orchestrator"
version = "0.2.0"
description = "Asyncio runtime for parallel LLM tool calls — rate limiting, timeouts, branch cancellation"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Daniel Schmidt"},
]
keywords = ["asyncio", "llm", "tools", "parallel", "orchestrator", "rate-limiting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = []  # zero runtime deps — pure asyncio

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Repository = "https://github.com/danieleschmidt/async-toolformer-orchestrator"

[tool.hatch.version]
path = "src/async_toolformer/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/async_toolformer"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["--strict-markers", "-q"]
markers = [
    "slow: marks tests as slow",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]
